--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<!-- sonatype parent pom -->
@@ -11,7 +10,7 @@
 
 	<groupId>com.github.frtu.schema-registries</groupId>
 	<artifactId>schema-registries-toolbox-pom</artifactId>
-	<version>0.1.1-SNAPSHOT</version>
+	<version>0.1.0</version>
 	<packaging>pom</packaging>
 
 	<name>Schema Registries toolbox</name>
@@ -39,7 +38,7 @@
 		<connection>scm:git:git@github.com:frtu/schema-registries-toolbox.git</connection>
 		<developerConnection>scm:git:git@github.com:frtu/schema-registries-toolbox.git</developerConnection>
 		<url>https://github.com/frtu/schema-registries-toolbox/tree/master</url>
-		<tag>HEAD</tag>
+		<tag>version-0.1.0</tag>
 	</scm>
 
 	<distributionManagement>
