--- a/schema-registries-maven-plugin/pom.xml
+++ b/schema-registries-maven-plugin/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>com.github.frtu.schema-registries</groupId>
 		<artifactId>schema-registries-toolbox-pom</artifactId>
-		<version>0.1.1-SNAPSHOT</version>
+		<version>0.1.0</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<artifactId>schema-registries-maven-plugin</artifactId>
