--- a/schema-registries/schema-registries-maven-plugin/pom.xml
+++ b/schema-registries/schema-registries-maven-plugin/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.frtu.schema-registries</groupId>
+		<groupId>com.github.frtu.governance</groupId>
 		<artifactId>schema-registries-toolbox-pom</artifactId>
 		<version>0.1.2-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
@@ -13,7 +13,7 @@
 	<description>A maven plugin to register schemas into a Schema Registry.</description>
 
 	<properties>
-		<hortonworks.registries.version>0.3.0</hortonworks.registries.version>
+		<hortonworks.registries.version>0.2.1</hortonworks.registries.version>
 		<avro.version>1.7.7</avro.version>
 
 		<commons-lang3.version>3.3.2</commons-lang3.version>
