--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 	<url>https://github.com/frtu/governance-toolbox/</url>
 
 	<modules>
-		<module>schema-registries</module>
+		<module>maven-plugins</module>
 	</modules>
 
 	<licenses>
