--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ hs_err_pid*
 #################
 # For more precise ignore, look at https://www.gitignore.io/api/jetbrains
 **/.idea/**
+**/*.iml
 
 # CMake
 **/cmake-build-*/
