--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 	<url>https://github.com/frtu/governance-toolbox/</url>
 
 	<modules>
+		<module>archetype</module>
 		<module>maven-plugins</module>
 	</modules>
 
