Fix generation issues & include avsc schema, build, import

--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-model/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-model/pom.xml
@@ -17,6 +17,11 @@
         </dependency>
     </dependencies>
     <build>
+        <resources>
+            <resource>
+                <directory>${project.basedir}/src/main/avro/</directory>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.apache.avro</groupId>
