--- a/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -7,10 +7,7 @@
     <version>${version}</version>
     <packaging>pom</packaging>
 
-    <modules>
-        <module>${artifactId}</module>
-        <module>${artifactId}-model</module>
-    </modules>
+    <modules/>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
