--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -14,6 +14,13 @@
     </properties>
 
     <dependencies>
+        <!-- Internal domain dependencies -->
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>${artifactId}-model</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <!-- Logs -->
         <dependency>
             <groupId>org.slf4j</groupId>
