--- a/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -24,7 +24,7 @@
         <!-- & on https://search.maven.org/artifact/org.apache.kafka/kafka-clients/2.0.0/jar -->
         <!--===========================-->
         <slf4j.version>1.7.25</slf4j.version>
-        <!--<logback.version>1.1.5</logback.version>-->
+        <logback.version>1.2.2</logback.version>
         <junit.version>4.12</junit.version>
         <!--<powermock.version>1.6.2</powermock.version>-->
         <easymock.version>3.6</easymock.version>
