Rename model -> datamodel Declare schema registry plugins

--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__/pom.xml
@@ -17,7 +17,7 @@
         <!-- Internal domain dependencies -->
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>${artifactId}-model</artifactId>
+            <artifactId>${artifactId}-datamodel</artifactId>
             <version>${project.version}</version>
         </dependency>
 
