--- a/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-datamodel/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/__rootArtifactId__-datamodel/pom.xml
@@ -8,7 +8,13 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>${artifactId}-model</artifactId>
+    <artifactId>${artifactId}-datamodel</artifactId>
+
+    <properties>
+        <!--<governance-maven-plugin.version>${base-pom-version}</governance-maven-plugin.version>-->
+        <!--<confluent-schema-registry-plugin.version>4.0.0</confluent-schema-registry-plugin.version>-->
+        <!--<schemaregistry.url>http://localhost:8081</schemaregistry.url>-->
+    </properties>
 
     <dependencies>
         <dependency>
@@ -59,6 +65,33 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--===========================-->
+            <!--UNCOMMENT FOR HORTONWORKS SCHEMA REGISTRY-->
+            <!--<plugin>-->
+                <!--<groupId>com.github.frtu.governance</groupId>-->
+                <!--<artifactId>schema-registries-maven-plugin</artifactId>-->
+                <!--<version>${governance-maven-plugin.version}</version>-->
+            <!--</plugin>-->
+            <!--===========================-->
+            <!--UNCOMMENT FOR CONFLUENT SCHEMA REGISTRY-->
+            <!--<plugin>-->
+                <!--<groupId>io.confluent</groupId>-->
+                <!--<artifactId>kafka-schema-registry-maven-plugin</artifactId>-->
+                <!--<version>${confluent-schema-registry-plugin.version}</version>-->
+                <!--<configuration>-->
+                    <!--<schemaRegistryUrls>-->
+                        <!--<param>${schemaregistry.url}</param>-->
+                    <!--</schemaRegistryUrls>-->
+                    <!--<subjects>-->
+                        <!--<TestSubject000-key>src/main/avro/xxx-Key.avsc</TestSubject000-key>-->
+                        <!--<TestSubject000-value>src/main/avro/xxx-Value.avsc</TestSubject000-value>-->
+                    <!--</subjects>-->
+                <!--</configuration>-->
+                <!--<goals>-->
+                    <!--<goal>register</goal>-->
+                <!--</goals>-->
+            <!--</plugin>-->
+            <!--===========================-->
         </plugins>
     </build>
 </project>
