--- a/archetype/kafka-project/pom.xml
+++ b/archetype/kafka-project/pom.xml
@@ -3,6 +3,6 @@
 
 	<groupId>com.github.frtu.archetype</groupId>
     <artifactId>kafka-project-archetype</artifactId>
-	<version>0.3.0</version>
+	<version>0.3.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 </project>
