--- a/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
+++ b/archetype/kafka-project/src/main/resources/archetype-resources/pom.xml
@@ -37,13 +37,20 @@
         <jackson.version>2.8.5</jackson.version>
         <kafka.version>2.0.0</kafka.version>
 
-        <!--https://docs.confluent.io/current/schema-registry/docs/maven-plugin.html-->
+        <!--https://docs.confluent.io/current/clients/install.html?_ga=2.53151595.2105087684.1538406517-910848708.1535980058#installation-maven-->
         <confluent.maven.repo>https://packages.confluent.io/maven/</confluent.maven.repo>
-        <confluent-schema-registry-plugin.version>5.0.0</confluent-schema-registry-plugin.version>
+        <confluent.version>5.0.0</confluent.version>
         <!--https://github.com/frtu/governance-toolbox#hortonworks-schema-registry-->
         <governance-maven-plugin.version>${base-pom-version}</governance-maven-plugin.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>confluent</id>
+            <name>Confluent</name>
+            <url>${confluent.maven.repo}</url>
+        </repository>
+    </repositories>
     <pluginRepositories>
         <pluginRepository>
             <id>confluent</id>
@@ -75,6 +82,38 @@
                 <groupId>org.apache.kafka</groupId>
                 <artifactId>kafka_2.12</artifactId>
                 <version>${kafka.version}</version>
+            </dependency>
+
+            <!-- Confluent Stack -->
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-avro-serializer</artifactId>
+                <version>${confluent.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-log4j12</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>log4j</artifactId>
+                        <groupId>log4j</groupId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>io.confluent</groupId>
+                <artifactId>kafka-schema-registry-client</artifactId>
+                <version>${confluent.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <artifactId>slf4j-log4j12</artifactId>
+                        <groupId>org.slf4j</groupId>
+                    </exclusion>
+                    <exclusion>
+                        <artifactId>log4j</artifactId>
+                        <groupId>log4j</groupId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Internal domain dependencies -->
@@ -191,10 +230,11 @@
                 </plugin>
                 <!--===========================-->
                 <!-- CONFLUENT SCHEMA REGISTRY-->
+                <!--https://docs.confluent.io/current/schema-registry/docs/maven-plugin.html-->
                 <plugin>
                     <groupId>io.confluent</groupId>
                     <artifactId>kafka-schema-registry-maven-plugin</artifactId>
-                    <version>${confluent-schema-registry-plugin.version}</version>
+                    <version>${confluent.version}</version>
                 </plugin>
                 <!--===========================-->
             </plugins>
